--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "app.js",
+    "dev": "nodemon app.js",
+    "prod": "set NODE_ENV=production && nodemon app.js"
   },
-  "author": "ya",
+  "author": "Nu Ya",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-favicon": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
