--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "node",
+  "name": "7120b",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "start": "app.js",
     "dev": "nodemon app.js",
-    "prod": "set NODE_ENV=production && nodemon app.js"
+    "prod": "set NODE_ENV=production && nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nu Ya",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-favicon": "^2.0.4"
+    "express-favicon": "^2.0.4",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
