--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-favicon": "^2.0.4",
     "express-session": "^1.17.3",
+    "mysql2": "^3.7.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
