--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-favicon": "^2.0.4",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "sass": "^1.69.5",
     "sqlite3": "^5.1.6",
     "winston": "^3.11.0"
